# scrapy-docker

./: .drone.yml  .gitignore  Dockerfile  README.md  TODO  docker-compose.yaml  dockerfile  pyproject.toml
scrapy_basic/: scrapy.cfg
scrapy_basic/scrapy_basic/: pipelines.py  settings.py
scrapy_basic/scrapy_basic/spiders/: test.py
spiders/: test.py
