[tool.poetry]
name = "scrapy-docker"
version = "0.1.0"
description = ""
authors = ["bulkinegra_local <v.valentinvolkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.5.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
